js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-if-braceless-import-assertions-trailing-comma-first.js
if
(
true
)
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
reportCompare
(
0
0
)
;
