js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-braceless-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
if
(
true
)
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
